# ToyML

./: GrammarSketch.txt  README.md  WorkFlow.txt  toyml_compiler.py
Lexer&Parser/: dsl.lark  example.dsl  parser.py
Transformer/: transformer.py  transformer_tests.py
examples/: compiler_test.toyml
lexer_parser/: dsl.lark  parser.py  parser_tests.py
mlir_backend/: CMakeLists.txt  mlir_gen.py  mlir_gen_tests.py  mlir_workflow_example.txt  test.toyml
mlir_backend/include/ToyML/: ToyMLDialect.h  ToyMLDialect.td  ToyMLOps.h  ToyMLOps.td  ToyMLTypes.h  ToyMLTypes.td
mlir_backend/lib/: CMakeLists.txt
mlir_backend/lib/ToyML/: CMakeLists.txt  ToyMLDialect.cpp  ToyMLOps.cpp  ToyMLTypes.cpp
samples/: model_types_example.toyml  model_types_showcase.toyml
